[package]
name = "root"
version = "0.1.0"
edition = "2021"

[dependencies]

mini-format = {git = "https://gitlab.univ-lille.fr/2xs/mini-format.git"}
ptr_bits_ops = {git = "https://github.com/LekloOno/pointer_bits_operators"}
enum_from_derive = {git = "https://github.com/LekloOno/ProcMacro_PrimitiveToEnum"}

[profile.dev]
panic = "abort"
debug = true

[profile.release]
panic = "abort"
lto = true
